# LCGIH-G7-Practicas_Jesus-Caballero

./: .gitignore  ConfigInicial.slnx  README.md
ConfigInicial/: CMakeLists.txt  ConfigInicial.vcxproj  ConfigInicial.vcxproj.filters  Main_Dibujo2D.cpp  Main_Modelado.cpp  Main_P3.cpp  Shader.h  comp.sh
Practica1_Jesus_Caballero/ConfigInicial/ConfigInicial/: ConfigInicial.vcxproj  Main.cpp
Previo2_Jesus_Caballero/ConfigInicial/ConfigInicial/: Main_Dibujo2D.cpp
